:fire: build(profile): add minhankyaw profile

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,13 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-.mse-gradient {
-  background: linear-gradient(
-    145deg,
-    rgb(0, 32, 95) 2.8%,
-    rgb(132, 53, 142) 80.8%
-  );
-}
+// .mse-gradient {
+//   background: linear-gradient(
+//     145deg,
+//     rgb(0, 32, 95) 2.8%,
+//     rgb(132, 53, 142) 80.8%
+//   );
+// }
 
 // Profile scss
 
@@ -17,4 +17,4 @@
 @import "profiles/aungmyatmoe";
 @import "profiles/aungkoko";
 @import "profiles/peter";
-@import "profiles/jiro"
+@import "profiles/jiro";
